# OOR

./: LICENSE  pyproject.toml
data/: coverage.csv  nurses.csv  preferences.csv  solution.csv
simulation/: basic.py  complex.py
src/: config.py  solve_nurse_rostering.py  solve_nurse_rostering_cp_sat.py  solve_nurse_rostering_mip.py  structs.py
src/simulation/: basic.py  complex.py
src/visualization/: calendar.py  heatmap.py  schedule_calendar.py
